fixed z-index issue with nav #12

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -224,9 +224,6 @@
    font-size: 20px;
   }
 
-  header {
-    z-index: 1;
-  }
    
   nav {
      width: 100vw;
@@ -346,6 +343,7 @@ header {
   width: 100%;
   position: fixed;
   top: 0;
+  z-index: 1;
 }
 
 footer {
@@ -445,10 +443,6 @@ a {
 }
 
 /* NAV-BAR */
-
-.front {
-  z-index: 1;
-}
 
 #logo {
   text-align: center;
